Story nodes unfold when clicked

--- a/stories.html
+++ b/stories.html
@@ -11,6 +11,7 @@
 
         circle.node-dot {
           fill: lightsalmon;
+          cursor: pointer;
           stroke: red;
           stroke-width: 1px;
         }
@@ -24,8 +25,8 @@
   
   <body>
 	<div id="story-container"></div>
-	<h3 name="node_title">Node Title</h3>  
-	<p name="node_body">Node Body</p>	
+	<h3 id="node_title">Node Title</h3>  
+	<p id="node_body">Node Body</p>	
 	
     <script type="text/javascript" src="d3.js"></script>
     <script type="text/javascript" src="stories.js"></script>
