Nodes now connected by straight lines

--- a/stories.html
+++ b/stories.html
@@ -16,9 +16,9 @@
           stroke-width: 1px;
         }
 
-        path.link {
-          fill: none;
-          stroke: gray;
+        line.link {
+          stroke:gray;
+          stroke-width:2
         }
       </style>
   </head>
