Zoom map to clicked story node

--- a/stories.html
+++ b/stories.html
@@ -24,7 +24,9 @@
   </head>
   
   <body>
-	<div id="story-container"></div>
+	<svg id="story-container">
+	  <image x="0" y="0" width="4378" height="2435" xlink:href = "worldmap.svg" />
+	</svg>
 	<h3 id="node_title">Node Title</h3>  
 	<p id="node_body">Node Body</p>	
 	
